--- a/idcard.html
+++ b/idcard.html
@@ -50,6 +50,25 @@
     .id-form button:hover {
       background: #0849a2;
     }
+
+    /* Back Home Button */
+    .back-btn {
+      background: #ffc107;
+      border: none;
+      color: #000;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+      transition: all 0.3s ease;
+    }
+    .back-btn:hover {
+      background: #e0a800;
+      color: #fff;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -74,10 +93,11 @@
       </div>
       <button type="submit">Generate Digital ID Card</button>
     </form>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
   </div>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec'; // ✅ Your Script URL
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
     document.getElementById('idForm').addEventListener('submit', e => {
       e.preventDefault();
@@ -87,7 +107,6 @@
 
       const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-      // Open new window
       const newWin = window.open("", "_blank");
       newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
 
@@ -146,23 +165,20 @@
                     height: 100px;
                     border-radius: 50%;
                     object-fit: cover;
-                    margin-top: -50px;
+                    margin-top: -40px;
                     border: 4px solid white;
                     box-shadow: 0 0 10px rgba(0,0,0,0.3);
                   }
                   .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
                   .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
                   .qr-code { margin-top: 10px; }
-                  .print-btn {
-                    margin-top: 15px;
-                    background: #198754;
-                    color: white;
-                    border: none;
-                    padding: 10px 25px;
-                    border-radius: 8px;
+                  .academic-year {
                     font-weight: 600;
+                    color: #0b5ed7;
+                    margin-top: 8px;
+                    font-size: 15px;
+                    letter-spacing: 0.5px;
                   }
-                  .print-btn:hover { background: #146c43; }
                 </style>
               </head>
               <body>
@@ -181,10 +197,9 @@
                     <p><strong>Roll No:</strong> ${s.RollNumber}</p>
                     <p><strong>Phone:</strong> ${s.Phone}</p>
                     <div class="qr-code">
-                    <img src="${qrURL}" alt="QR Code">
-                    <p class="academic-year">Academic Year: 2025–26</p>
+                      <img src="${qrURL}" alt="QR Code">
+                      <p class="academic-year">Academic Year: 2025–26</p>
                     </div>
-                    
                   </div>
                 </div>
               </body>
@@ -201,19 +216,6 @@
           newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
         });
     });
-          <!-- BACK TO HOME -->
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
-  </footer>
-
   </script>
 </body>
 </html>
-
