--- a/idcard.html
+++ b/idcard.html
@@ -50,8 +50,6 @@
     .id-form button:hover {
       background: #0849a2;
     }
-
-    /* Back Home Button */
     .back-btn {
       background: #ffc107;
       border: none;
@@ -68,7 +66,6 @@
       background: #e0a800;
       color: #fff;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -128,6 +125,7 @@
                     background: #f0f4ff;
                     font-family: 'Poppins', sans-serif;
                     display: flex;
+                    flex-direction: column;
                     align-items: center;
                     justify-content: center;
                     height: 100vh;
@@ -140,6 +138,7 @@
                     overflow: hidden;
                     text-align: center;
                     border: 5px solid #0b5ed7;
+                    position: relative;
                   }
                   .id-header {
                     background: linear-gradient(90deg, #0b5ed7, #74b9ff);
@@ -165,7 +164,7 @@
                     height: 100px;
                     border-radius: 50%;
                     object-fit: cover;
-                    margin-top: -40px;
+                    margin-top: -20px; /* lowered slightly */
                     border: 4px solid white;
                     box-shadow: 0 0 10px rgba(0,0,0,0.3);
                   }
@@ -178,6 +177,22 @@
                     margin-top: 8px;
                     font-size: 15px;
                     letter-spacing: 0.5px;
+                  }
+                  .back-btn {
+                    background: #ffc107;
+                    border: none;
+                    color: #000;
+                    padding: 10px 20px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                    text-decoration: none;
+                    display: inline-block;
+                    margin: 15px 0;
+                    transition: all 0.3s ease;
+                  }
+                  .back-btn:hover {
+                    background: #e0a800;
+                    color: #fff;
                   }
                 </style>
               </head>
@@ -202,6 +217,7 @@
                     </div>
                   </div>
                 </div>
+                <a href="index.html" class="back-btn">⬅ Back to Home</a>
               </body>
               </html>
             `;
