--- a/forms.html
+++ b/forms.html
@@ -62,7 +62,7 @@
               <div class="invalid-feedback">Please enter student's full name.</div>
             </div>
             <div class="col-md-6">
-              <label class="form-label">Preferred Name</label>
+              <label class="form-label">House Name</label>
               <input type="text" class="form-control" name="PreferredName">
             </div>
             <div class="col-md-4">
@@ -78,8 +78,8 @@
               </select>
             </div>
             <div class="col-md-4">
-              <label class="form-label required">Applying For Class / Level</label>
-              <input type="text" class="form-control" name="ClassLevel" required placeholder="e.g., Primary / Hifz / Tajweed">
+              <label class="form-label required">Applying For Class</label>
+              <input type="text" class="form-control" name="ClassLevel" required placeholder="Please entre Applying Class">
             </div>
             <div class="col-md-6">
               <label class="form-label required">Parent / Guardian Name</label>
