--- a/forms.html
+++ b/forms.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-4">
               <label class="form-label required">Applying For Class</label>
-              <input type="text" class="form-control" name="ClassLevel" required placeholder="Please entre Applying Class">
+              <input type="text" class="form-control" name="ClassLevel" required placeholder="Please enter Applying Class">
             </div>
             <div class="col-md-6">
               <label class="form-label required">Parent / Guardian Name</label>
