--- a/idcard.html
+++ b/idcard.html
@@ -61,7 +61,7 @@
   <!-- Form -->
   <div class="id-form">
     <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
-    <h2>Noorussalam Madrasa</h2>
+    <h2>NOORUSSALAM MADRASA</h2>
     <p>Enter your Class and Roll Number to generate your ID card</p>
     <form id="idForm">
       <div class="mb-3 text-start">
@@ -166,6 +166,7 @@
                   <div class="id-header">
                     <h5>NOORUSSALAM SECONDARY MADRASA</h5>
                     <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
+                    <small>Under Samastha Kerala Islam Matha Vidyabhyasa Board, Reg No:6110</small>
                   </div>
                   <div class="id-body">
                     <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
