--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li class="nav-item"><a class="nav-link" href="#notifications">Notifications</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff/Muallims</a></li>
+        <li class="nav-item"><a class="nav-link" href="events.html" target="_blank">Events</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">id card</a></li>
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
@@ -267,6 +268,7 @@
 </script>
 </body>
 </html>
+
 
 
 
