--- a/idcard.html
+++ b/idcard.html
@@ -166,7 +166,7 @@
                   <div class="id-header">
                     <h5>NOORUSSALAM SECONDARY MADRASA</h5>
                     <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
-                    <small>Under Samastha Kerala Islam Matha Vidyabhyasa Board, Reg No:6110</small>
+                    <small>Under SKIMVB, Reg No:6110</small>
                   </div>
                   <div class="id-body">
                     <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
