--- a/index.html
+++ b/index.html
@@ -3,24 +3,147 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NSM KAMBIPPALAM</title>
+  <title>Noorussalam Madrasa | Kambippalam</title>
+
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      font-family: 'Rubik', sans-serif;
+      scroll-behavior: smooth;
+      background-color: #fdfdfd;
+    }
+
+    /* Navbar */
+    .navbar {
+      padding: 0.8rem 0;
+    }
+
+    .navbar-brand img {
+      border-radius: 10px;
+      transition: transform 0.3s ease;
+    }
+
+    .navbar-brand:hover img {
+      transform: scale(1.05);
+    }
+
+    .navbar-nav .nav-link {
+      font-weight: 500;
+      color: #333 !important;
+      transition: color 0.2s ease;
+    }
+
+    .navbar-nav .nav-link:hover {
+      color: #0d6efd !important;
+    }
+
+    .btn-primary {
+      background-color: #0d6efd;
+      border: none;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .btn-primary:hover {
+      background-color: #084ed1;
+      transform: translateY(-2px);
+    }
+
+    /* Hero Section */
+    .hero {
+      background: linear-gradient(120deg, rgba(13,110,253,0.08), rgba(13,202,240,0.08));
+      padding: 5rem 0;
+    }
+
+    .hero h1 {
+      color: #0d6efd;
+      margin-bottom: 1rem;
+    }
+
+    .hero .card {
+      border: none;
+      background: #fff;
+    }
+
+    /* About Section */
+    #about img {
+      border-radius: 16px;
+      transition: transform 0.4s ease;
+    }
+
+    #about img:hover {
+      transform: scale(1.03);
+    }
+
+    /* News Section */
+    #news .card {
+      border: none;
+      border-radius: 15px;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    #news .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    }
+
+    #news h3 {
+      color: #0d6efd;
+    }
+
+    /* Notifications */
+    #notifications .list-group-item {
+      border-left: 4px solid #0d6efd;
+      transition: background 0.2s ease;
+    }
+
+    #notifications .list-group-item:hover {
+      background-color: #f3f7ff;
+    }
+
+    /* Footer */
+    footer {
+      background: #0d6efd;
+      color: white;
+      margin-top: 2rem;
+    }
+
+    footer a {
+      color: #fff;
+      font-weight: 500;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .hero {
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container">
-   <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-  <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="NSM Logo" width="50" style="border-radius:8px;">
-  <div>
-    <div style="font-weight:700">NOORUSSALAM MADRASA</div>
-    <small class="text-muted">KAMBIPPALAM-KERALA ESTATE.</small>
-  </div>
-</a>
+    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+      <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="NSM Logo" width="55">
+      <div>
+        <div class="fw-bold text-uppercase">Noorussalam Madrasa</div>
+        <small class="text-muted">Kambippalam, Kerala Estate</small>
+      </div>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,10 +153,10 @@
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#notifications">Notifications</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff/Muallims</a></li>
+        <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html" target="_blank">Events</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">id card</a></li>
+        <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
         <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
@@ -45,25 +168,27 @@
 
 <!-- HERO -->
 <section id="home" class="hero text-dark">
-  <div class="container">
-    <div class="row align-items-center">
+  <div class="container py-5">
+    <div class="row align-items-center gy-4">
       <div class="col-lg-7">
         <h1 class="display-6 fw-bold">Noorussalam Madrasa — Knowledge, Character & Service</h1>
-        <p class="lead text-muted">Combining traditional Islamic studies with modern subjects to prepare students for today and tomorrow.</p>
-        <div class="d-flex flex-wrap gap-2">
+        <p class="lead text-muted">
+          Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.
+        </p>
+        <div class="d-flex flex-wrap gap-2 mt-3">
           <a href="forms.html" class="btn btn-primary btn-lg">Join Admissions</a>
           <a href="#about" class="btn btn-outline-secondary btn-lg">Learn More</a>
         </div>
       </div>
       <div class="col-lg-5 d-none d-lg-block">
-        <div class="card p-3 shadow" style="border-radius:16px">
+        <div class="card p-4 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">Quick Facts</h5>
-            <ul class="list-unstyled mb-0">
+            <h5 class="card-title text-primary fw-bold mb-3">Quick Facts</h5>
+            <ul class="list-unstyled mb-0 small text-muted">
               <li>✅ Established: 1989</li>
-              <li>✅ Library Fecility</li>
+              <li>✅ Library Facility</li>
               <li>✅ Dedicated Teachers</li>
-              <li>✅ Smart Class Room</li>
+              <li>✅ Smart Classrooms</li>
             </ul>
           </div>
         </div>
@@ -77,25 +202,22 @@
   <div class="container">
     <div class="row gy-4 align-items-center">
       <div class="col-md-6">
-        <h2>About Madrasa</h2>
-        <p class="text-muted"> 
-കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ. ഗ്രാമവാസികള്‍ക്കും തോട്ടത്തൊഴിലാളികള്‍ക്കും അക്കരയിക്കര പോവാന്‍ ബ്രിട്ടീഷുകാര്‍ പണിതീര്‍ത്ത കമ്പികൊണ്ട് നിര്‍മ്മിച്ച തൂക്കുപാലം(കമ്പിപ്പാലം) ഒരു ഗ്രാമത്തിന്റെ നാമമായത് ചരിത്രം.
-
-കര്‍ഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞു നില്‍ക്കുന്ന ഈ പ്രദേശം മത വിജ്ഞാന പ്രചാരണത്തിനും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ്.
-മഹല്ലിലെ മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989 ല്‍ മര്‍ഹൂം കെ. പി കുഞ്ഞാപ്പു മുസ്ലിയാര്‍ ശിലയിട്ടു. 15.5.1989 ല്‍ തന്നെ കെ. ടി ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്തു. 10.6.1989 ല്‍ സമസ്ത കേരള ഇസ്ലാം മത വിദ്യാഭ്യാസ ബോര്‍ഡ് 6110 നമ്പറായി അംഗീകാരം നല്‍കി. പി. ഇസ്മായില്‍ മുസ്ലിയാര്‍ സി. അബ്ദുന്നാസര്‍ മുസ്ലിയാര്‍ എന്നിവരാണ് ആദ്യ ഉസ്താദുമാര്‍.
-
-.</p>
+        <h2 class="fw-bold text-primary mb-3">About Madrasa</h2>
+        <p class="text-muted">
+          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ...
+        </p>
       </div>
       <div class="col-md-6">
-        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid rounded shadow-sm">
+        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-sm">
       </div>
     </div>
   </div>
 </section>
-<!-- LATEST NEWS SECTION -->
+
+<!-- LATEST NEWS -->
 <section id="news" class="py-5 bg-light">
   <div class="container text-center">
-    <h3 class="fw-bold mb-3">Latest News</h3>
+    <h3 class="fw-bold text-primary mb-3">Latest News</h3>
     <p class="text-muted mb-5">Stay updated with the latest events and announcements</p>
 
     <div id="newsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -104,13 +226,12 @@
         <!-- Slide 1 -->
         <div class="carousel-item active">
           <div class="row justify-content-center">
-            
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 1">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Admission">
                 <div class="card-body">
-                  <h5 class="card-title">Admission Open 2025</h5>
-                  <p class="card-text">Applications are now open for new admissions. Enroll your child today!</p>
+                  <h5 class="card-title fw-bold">Admission Open 2025</h5>
+                  <p class="card-text text-muted">Enroll your child today for the new academic year.</p>
                   <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
                 </div>
               </div>
@@ -118,10 +239,10 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 2">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Annual Day">
                 <div class="card-body">
-                  <h5 class="card-title">Annual Day Celebration</h5>
-                  <p class="card-text">Join us for our grand Annual Day program on 15th November 2025.</p>
+                  <h5 class="card-title fw-bold">Annual Day Celebration</h5>
+                  <p class="card-text text-muted">Join us for the grand Annual Day program on 15th November 2025.</p>
                   <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
                 </div>
               </div>
@@ -129,82 +250,37 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Results">
                 <div class="card-body">
-                  <h5 class="card-title">Result Announced</h5>
-                  <p class="card-text">Check out the academic results of 2024–25 session — congratulations to all!</p>
+                  <h5 class="card-title fw-bold">Result Announced</h5>
+                  <p class="card-text text-muted">Check out the 2024–25 session results — congratulations to all!</p>
                   <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
                 </div>
               </div>
             </div>
-
-          </div>
-        </div>
-
-        <!-- Slide 2 -->
-        <div class="carousel-item">
-          <div class="row justify-content-center">
-            
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 4">
-                <div class="card-body">
-                  <h5 class="card-title">PTA Meeting</h5>
-                  <p class="card-text">Parents are invited for the monthly PTA meeting scheduled next week.</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 5">
-                <div class="card-body">
-                  <h5 class="card-title">Science Fair</h5>
-                  <p class="card-text">Students will present innovative projects at the Science Fair 2025.</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 6">
-                <div class="card-body">
-                  <h5 class="card-title">Holiday Notice</h5>
-                  <p class="card-text">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
 
       </div>
-
-      <!-- Controls -->
       <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
       </button>
-
     </div>
   </div>
 </section>
 
 <!-- NOTIFICATIONS -->
-<section id="notifications" class="py-5 bg-light">
+<section id="notifications" class="py-5 bg-white">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3 class="mb-0">Notifications</h3>
+      <h3 class="fw-bold text-primary mb-0">Notifications</h3>
       <small class="text-muted">Latest updates & announcements</small>
     </div>
 
     <div class="list-group shadow-sm">
-      <!-- Example Notifications -->
       <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
         <div>
           <div class="fw-bold text-primary">Admission Open for 2025 Batch</div>
@@ -212,72 +288,41 @@
         </div>
         <span class="badge bg-success rounded-pill">NEW</span>
       </a>
-
-      <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
-        <div>
-          <div class="fw-bold text-primary">Meelad Day Celebration</div>
-          <small class="text-muted">December 20, 2025 — All parents and guardians are invited.</small>
-        </div>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="fw-bold text-primary">Meelad Day Celebration</div>
+        <small class="text-muted">December 20, 2025 — All parents and guardians are invited.</small>
       </a>
-
-      <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
-        <div>
-          <div class="fw-bold text-primary">Holiday Notice</div>
-          <small class="text-muted">The Madrasa will remain closed on November 1 for Kerala Formation Day.</small>
-        </div>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="fw-bold text-primary">Holiday Notice</div>
+        <small class="text-muted">Closed on November 1 for Kerala Formation Day.</small>
       </a>
-
-      <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+      <a href="result.html" target="_blank" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
         <div>
           <div class="fw-bold text-primary">Result Published</div>
           <small class="text-muted">Click below to check your results online.</small>
         </div>
-        <a href="result.html"
-           class="btn btn-outline-success btn-sm" target="_blank">View Result</a>
+        <span class="btn btn-outline-success btn-sm">View Result</span>
       </a>
     </div>
   </div>
 </section>
 
-
-
-<!-- (Other sections like Courses, Admissions, Events, Gallery, Contact remain same) -->
-
 <!-- FOOTER -->
-<footer class="footer py-4">
-  <div class="container text-center">
-    <strong class="text-uppercase d-block">Noorussalam Madrasa</strong>
+<footer class="py-4 text-center">
+  <div class="container">
+    <strong class="text-uppercase d-block fs-5">Noorussalam Madrasa</strong>
     <small class="d-block">© <span id="year"></span> All rights reserved.</small>
     <div class="mt-2">
       Hosted by <strong>Suhail Kerala</strong> • 
-      Contact: <a href="mailto:noorussalam6110@gmail.com" class="text-decoration-none">noorussalam6110@gmail.com</a>
+      <a href="mailto:noorussalam6110@gmail.com">noorussalam6110@gmail.com</a>
     </div>
   </div>
 </footer>
 
 <script>
-  // Auto update year
   document.getElementById("year").textContent = new Date().getFullYear();
 </script>
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
