--- a/index.html
+++ b/index.html
@@ -12,20 +12,38 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap" rel="stylesheet">
 
+  <!-- AOS Animation -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
   <style>
+    :root {
+      --primary: #0a194f;
+      --secondary: #122f7a;
+      --accent: #f3c13a;
+      --light: #f8f9fa;
+    }
+
     body {
       font-family: 'Rubik', sans-serif;
+      background-color: var(--primary);
+      color: var(--light);
       scroll-behavior: smooth;
-      background-color: #fdfdfd;
+      overflow-x: hidden;
     }
 
     /* Navbar */
     .navbar {
-      padding: 0.8rem 0;
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      transition: background 0.4s ease;
+    }
+
+    .navbar.scrolled {
+      background: rgba(10, 25, 79, 0.95);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
 
     .navbar-brand img {
-      border-radius: 10px;
+      border-radius: 8px;
       transition: transform 0.3s ease;
     }
 
@@ -34,44 +52,73 @@
     }
 
     .navbar-nav .nav-link {
+      color: #f8f9fa !important;
       font-weight: 500;
-      color: #333 !important;
       transition: color 0.2s ease;
     }
 
     .navbar-nav .nav-link:hover {
-      color: #0d6efd !important;
+      color: var(--accent) !important;
     }
 
     .btn-primary {
-      background-color: #0d6efd;
+      background: var(--accent);
       border: none;
+      color: var(--primary);
       border-radius: 8px;
+      font-weight: 600;
+      box-shadow: 0 0 10px rgba(243,193,58,0.4);
       transition: all 0.3s ease;
     }
 
     .btn-primary:hover {
-      background-color: #084ed1;
+      background: #ffda5c;
+      box-shadow: 0 0 15px rgba(243,193,58,0.7);
       transform: translateY(-2px);
     }
 
-    /* Hero Section */
+    .btn-outline-secondary {
+      color: var(--accent);
+      border-color: var(--accent);
+    }
+
+    .btn-outline-secondary:hover {
+      background: var(--accent);
+      color: var(--primary);
+    }
+
+    /* Hero */
     .hero {
-      background: linear-gradient(120deg, rgba(13,110,253,0.08), rgba(13,202,240,0.08));
+      background: linear-gradient(160deg, var(--secondary), var(--primary));
       padding: 5rem 0;
+      text-align: center;
     }
 
     .hero h1 {
-      color: #0d6efd;
-      margin-bottom: 1rem;
+      color: var(--accent);
+      font-weight: 700;
+    }
+
+    .hero p {
+      color: #dfe6ff;
     }
 
     .hero .card {
-      border: none;
-      background: #fff;
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
+      color: #fff;
     }
 
-    /* About Section */
+    /* About */
+    #about {
+      background: #ffffff;
+      color: #333;
+    }
+
+    #about h2 {
+      color: var(--secondary);
+    }
+
     #about img {
       border-radius: 16px;
       transition: transform 0.4s ease;
@@ -81,53 +128,71 @@
       transform: scale(1.03);
     }
 
-    /* News Section */
+    /* News */
+    #news {
+      background: linear-gradient(120deg, var(--primary), var(--secondary));
+      color: white;
+    }
+
     #news .card {
       border: none;
       border-radius: 15px;
-      overflow: hidden;
+      background: rgba(255,255,255,0.08);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     #news .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
     }
 
-    #news h3 {
-      color: #0d6efd;
+    #news .card-title {
+      color: var(--accent);
+      font-weight: 600;
     }
 
     /* Notifications */
+    #notifications {
+      background: #f8f9fa;
+      color: #333;
+    }
+
+    #notifications h3 {
+      color: var(--secondary);
+    }
+
     #notifications .list-group-item {
-      border-left: 4px solid #0d6efd;
+      border-left: 5px solid var(--accent);
       transition: background 0.2s ease;
     }
 
     #notifications .list-group-item:hover {
-      background-color: #f3f7ff;
+      background-color: #fff5d6;
     }
 
     /* Footer */
     footer {
-      background: #0d6efd;
-      color: white;
-      margin-top: 2rem;
+      background: linear-gradient(90deg, var(--secondary), var(--primary));
+      color: #fff;
     }
 
     footer a {
-      color: #fff;
+      color: var(--accent);
       font-weight: 500;
     }
 
     footer a:hover {
+      color: #fff;
       text-decoration: underline;
     }
 
-    /* Responsive */
     @media (max-width: 768px) {
-      .hero {
-        text-align: center;
+      .hero h1 {
+        font-size: 1.8rem;
+      }
+      .btn-lg {
+        font-size: 1rem;
+        padding: 0.6rem 1rem;
       }
     }
   </style>
@@ -135,13 +200,13 @@
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-      <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="NSM Logo" width="55">
+      <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="NSM Logo" width="50">
       <div>
-        <div class="fw-bold text-uppercase">Noorussalam Madrasa</div>
-        <small class="text-muted">Kambippalam, Kerala Estate</small>
+        <div class="fw-bold text-uppercase text-white">Noorussalam Madrasa</div>
+        <small class="text-light">Kambippalam, Kerala Estate</small>
       </div>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -167,33 +232,12 @@
 </nav>
 
 <!-- HERO -->
-<section id="home" class="hero text-dark">
+<section id="home" class="hero text-white" data-aos="fade-up">
   <div class="container py-5">
-    <div class="row align-items-center gy-4">
-      <div class="col-lg-7">
-        <h1 class="display-6 fw-bold">Noorussalam Madrasa — Knowledge, Character & Service</h1>
-        <p class="lead text-muted">
-          Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.
-        </p>
-        <div class="d-flex flex-wrap gap-2 mt-3">
-          <a href="forms.html" class="btn btn-primary btn-lg">Join Admissions</a>
-          <a href="#about" class="btn btn-outline-secondary btn-lg">Learn More</a>
-        </div>
-      </div>
-      <div class="col-lg-5 d-none d-lg-block">
-        <div class="card p-4 shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title text-primary fw-bold mb-3">Quick Facts</h5>
-            <ul class="list-unstyled mb-0 small text-muted">
-              <li>✅ Established: 1989</li>
-              <li>✅ Library Facility</li>
-              <li>✅ Dedicated Teachers</li>
-              <li>✅ Smart Classrooms</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h1 class="display-5">Noorussalam Madrasa — Knowledge, Character & Service</h1>
+    <p class="lead mb-4">Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.</p>
+    <a href="forms.html" class="btn btn-primary btn-lg m-2">Join Admissions</a>
+    <a href="#about" class="btn btn-outline-secondary btn-lg m-2">Learn More</a>
   </div>
 </section>
 
@@ -201,82 +245,60 @@
 <section id="about" class="py-5">
   <div class="container">
     <div class="row gy-4 align-items-center">
-      <div class="col-md-6">
-        <h2 class="fw-bold text-primary mb-3">About Madrasa</h2>
+      <div class="col-md-6" data-aos="fade-right">
+        <h2 class="fw-bold mb-3">About Madrasa</h2>
         <p class="text-muted">
           കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ...
         </p>
       </div>
-      <div class="col-md-6">
-        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-sm">
+      <div class="col-md-6 text-center" data-aos="fade-left">
+        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-lg">
       </div>
     </div>
   </div>
 </section>
 
-<!-- LATEST NEWS -->
-<section id="news" class="py-5 bg-light">
-  <div class="container text-center">
-    <h3 class="fw-bold text-primary mb-3">Latest News</h3>
-    <p class="text-muted mb-5">Stay updated with the latest events and announcements</p>
-
-    <div id="newsCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-
-        <!-- Slide 1 -->
-        <div class="carousel-item active">
-          <div class="row justify-content-center">
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Admission">
-                <div class="card-body">
-                  <h5 class="card-title fw-bold">Admission Open 2025</h5>
-                  <p class="card-text text-muted">Enroll your child today for the new academic year.</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Annual Day">
-                <div class="card-body">
-                  <h5 class="card-title fw-bold">Annual Day Celebration</h5>
-                  <p class="card-text text-muted">Join us for the grand Annual Day program on 15th November 2025.</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Results">
-                <div class="card-body">
-                  <h5 class="card-title fw-bold">Result Announced</h5>
-                  <p class="card-text text-muted">Check out the 2024–25 session results — congratulations to all!</p>
-                  <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
-                </div>
-              </div>
-            </div>
+<!-- NEWS -->
+<section id="news" class="py-5 text-center">
+  <div class="container">
+    <h3 class="fw-bold mb-4" data-aos="zoom-in">Latest News</h3>
+    <div class="row justify-content-center">
+      <div class="col-md-4 mb-3" data-aos="fade-up">
+        <div class="card p-2">
+          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Admission">
+          <div class="card-body">
+            <h5 class="card-title">Admission Open 2025</h5>
+            <p class="card-text text-light small">Enroll your child today for the new academic year.</p>
           </div>
         </div>
-
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="100">
+        <div class="card p-2">
+          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Annual Day">
+          <div class="card-body">
+            <h5 class="card-title">Annual Day Celebration</h5>
+            <p class="card-text text-light small">Join us for the grand Annual Day program on 15th November 2025.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="200">
+        <div class="card p-2">
+          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Results">
+          <div class="card-body">
+            <h5 class="card-title">Result Announced</h5>
+            <p class="card-text text-light small">Check out the 2024–25 session results — congratulations to all!</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
 <!-- NOTIFICATIONS -->
-<section id="notifications" class="py-5 bg-white">
+<section id="notifications" class="py-5" data-aos="fade-up">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3 class="fw-bold text-primary mb-0">Notifications</h3>
+      <h3 class="fw-bold">Notifications</h3>
       <small class="text-muted">Latest updates & announcements</small>
     </div>
 
@@ -310,7 +332,7 @@
 <!-- FOOTER -->
 <footer class="py-4 text-center">
   <div class="container">
-    <strong class="text-uppercase d-block fs-5">Noorussalam Madrasa</strong>
+    <strong class="text-uppercase d-block fs-5" style="color:var(--accent)">Noorussalam Madrasa</strong>
     <small class="d-block">© <span id="year"></span> All rights reserved.</small>
     <div class="mt-2">
       Hosted by <strong>Suhail Kerala</strong> • 
@@ -319,10 +341,17 @@
   </div>
 </footer>
 
+<!-- JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
   document.getElementById("year").textContent = new Date().getFullYear();
+  AOS.init({ duration: 1000, once: true });
+  window.addEventListener('scroll', function() {
+    const navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('scrolled', window.scrollY > 50);
+  });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
