--- a/index.html
+++ b/index.html
@@ -261,35 +261,77 @@
 <!-- NEWS -->
 <section id="news" class="py-5 text-center">
   <div class="container">
-    <h3 class="fw-bold mb-4" data-aos="zoom-in">Latest News</h3>
-    <div class="row justify-content-center">
-      <div class="col-md-4 mb-3" data-aos="fade-up">
-        <div class="card p-2">
-          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Admission">
-          <div class="card-body">
-            <h5 class="card-title">Admission Open 2025</h5>
-            <p class="card-text text-light small">Enroll your child today for the new academic year.</p>
+    <h3 class="fw-bold mb-4 text-light" data-aos="zoom-in">Latest News</h3>
+    <p class="text-light mb-5">Stay updated with the latest announcements and events</p>
+
+    <div id="singleNewsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+      <div class="carousel-inner">
+
+        <!-- News 1 -->
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-center">
+            <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
+              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Admission Open">
+              <div class="card-body">
+                <h5 class="card-title text-warning">Admission Open 2025</h5>
+                <p class="card-text text-light small">Enroll your child today for the new academic year.</p>
+                <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="100">
-        <div class="card p-2">
-          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Annual Day">
-          <div class="card-body">
-            <h5 class="card-title">Annual Day Celebration</h5>
-            <p class="card-text text-light small">Join us for the grand Annual Day program on 15th November 2025.</p>
+
+        <!-- News 2 -->
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
+              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Annual Day">
+              <div class="card-body">
+                <h5 class="card-title text-warning">Annual Day Celebration</h5>
+                <p class="card-text text-light small">Join us for the grand Annual Day program on 15th November 2025.</p>
+                <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="200">
-        <div class="card p-2">
-          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="Results">
-          <div class="card-body">
-            <h5 class="card-title">Result Announced</h5>
-            <p class="card-text text-light small">Check out the 2024–25 session results — congratulations to all!</p>
+
+        <!-- News 3 -->
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
+              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Results Announced">
+              <div class="card-body">
+                <h5 class="card-title text-warning">Results Announced</h5>
+                <p class="card-text text-light small">Check out the 2024–25 academic results — congratulations to all!</p>
+                <a href="result.html" class="btn btn-outline-light btn-sm">View Results</a>
+              </div>
+            </div>
           </div>
         </div>
+
+        <!-- News 4 -->
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
+              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Holiday Notice">
+              <div class="card-body">
+                <h5 class="card-title text-warning">Holiday Notice</h5>
+                <p class="card-text text-light small">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
+                <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
+
+      <!-- Controls -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#singleNewsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#singleNewsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
   </div>
 </section>
@@ -355,3 +397,4 @@
 
 </body>
 </html>
+
