--- a/pta.html
+++ b/pta.html
@@ -6,14 +6,70 @@
   <title>Parent-Teacher Association - Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Rubik', sans-serif;
+      background-color: #f7f9fc;
+    }
+
+    header {
+      background: linear-gradient(135deg, #0d47a1, #1976d2);
+      color: #fff;
+    }
+
+    h2, h4, h5, h6 {
+      color: #0d47a1;
+    }
+
+    .card {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 15px;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    }
+
+    .fw-bold {
+      color: #0d47a1;
+    }
+
+    .btn-outline-primary {
+      border-color: #0d47a1;
+      color: #0d47a1;
+      transition: all 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #0d47a1;
+      color: #fff;
+    }
+
+    footer {
+      background: #0d47a1;
+      color: #fff;
+    }
+
+    /* Fade-in animation */
+    [data-animate] {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.6s ease-in-out;
+    }
+
+    [data-animate].visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  </style>
 </head>
 <body>
 
   <!-- HEADER -->
-  <header class="bg-primary text-white text-center py-4 shadow-sm">
-    <h2 class="mb-0">Parent-Teacher Association (PTA)</h2>
-    <p class="mb-0">Working together for students’ success</p>
+  <header class="text-center py-4 shadow-sm">
+    <h2 class="mb-0 fw-bold text-white">Parent-Teacher Association (PTA)</h2>
+    <p class="mb-0 text-light">Working together for students’ success</p>
   </header>
 
   <!-- PTA SECTION -->
@@ -22,7 +78,7 @@
       <div class="row justify-content-center mb-5">
         <div class="col-md-8 text-center">
           <p class="lead text-muted">
-            The Parent-Teacher Association (PTA) of <strong>Nooruussalam Madrasa</strong> fosters a close relationship 
+            The <strong>Parent-Teacher Association (PTA)</strong> of <strong>Noorussalam Madrasa</strong> fosters close relationships 
             between parents and teachers, ensuring the holistic growth of our students through collaboration, 
             communication, and community involvement.
           </p>
@@ -31,58 +87,61 @@
 
       <!-- MANAGEMENT -->
       <div class="text-center mb-4">
-        <h4 class="fw-bold mb-3">Exicutive Members (2025-26)</h4>
+        <h4 class="fw-bold mb-3 text-uppercase">Executive Members (2025–26)</h4>
       </div>
-      <div class="row g-4 justify-content-center">
 
+      <div class="row g-4 justify-content-center">
         <!-- President -->
-        <div class="col-md-4 text-center">
-          <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" class="rounded-circle mx-auto mb-3" alt="President" width="120" height="120" style="object-fit:cover;">
+        <div class="col-md-4 text-center" data-animate>
+          <div class="card shadow-sm border-0 p-4">
+            <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="President" width="130" height="130" style="object-fit:cover;">
             <h6 class="fw-bold">Mr. Abdu Mangalath</h6>
-            <small class="text-muted"> President</small>
+            <small class="text-muted d-block mb-1">President</small>
+            <p class="small text-muted mb-0">A respected community leader dedicated to enhancing student welfare and collaboration.</p>
           </div>
         </div>
 
         <!-- Secretary -->
-        <div class="col-md-4 text-center">
-          <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3" alt="Vice President" width="120" height="120" style="object-fit:cover;">
+        <div class="col-md-4 text-center" data-animate>
+          <div class="card shadow-sm border-0 p-4">
+            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="Secretary" width="130" height="130" style="object-fit:cover;">
             <h6 class="fw-bold">Mr. Fairoosudheen P</h6>
-            <small class="text-muted">Gen. Secretary</small>
+            <small class="text-muted d-block mb-1">General Secretary</small>
+            <p class="small text-muted mb-0">Actively coordinates PTA activities and communication between parents and staff.</p>
           </div>
         </div>
 
         <!-- Treasurer -->
-        <div class="col-md-4 text-center">
-          <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" class="rounded-circle mx-auto mb-3" alt="Secretary" width="120" height="120" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr.Saif Saleem P</h6>
-            <small class="text-muted">Treasurer</small>
+        <div class="col-md-4 text-center" data-animate>
+          <div class="card shadow-sm border-0 p-4">
+            <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="Treasurer" width="130" height="130" style="object-fit:cover;">
+            <h6 class="fw-bold">Mr. Saif Saleem P</h6>
+            <small class="text-muted d-block mb-1">Treasurer</small>
+            <p class="small text-muted mb-0">Ensures transparency and effective management of PTA financial activities.</p>
           </div>
         </div>
       </div>
 
       <!-- Activities Section -->
-      <div class="mt-5">
-        <h5 class="text-center fw-bold mb-4">Recent PTA Activities</h5>
-        <div class="row g-3">
+      <div class="mt-5" data-animate>
+        <h5 class="text-center fw-bold mb-4 text-uppercase">Recent PTA Activities</h5>
+        <div class="row g-4">
           <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0">
-              <h6 class="fw-bold">Parent Awareness Program</h6>
-              <p class="text-muted small">A seminar conducted on effective parenting and communication with teachers.</p>
+            <div class="card p-3 shadow-sm border-0 h-100">
+              <h6 class="fw-bold mb-2">Parent Awareness Program</h6>
+              <p class="text-muted small mb-0">A seminar on effective parenting and communication between teachers and parents.</p>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0">
-              <h6 class="fw-bold">Campus Clean-Up Day</h6>
-              <p class="text-muted small">Parents, students, and teachers joined hands to beautify the campus.</p>
+            <div class="card p-3 shadow-sm border-0 h-100">
+              <h6 class="fw-bold mb-2">Campus Clean-Up Day</h6>
+              <p class="text-muted small mb-0">Parents, students, and teachers joined hands to beautify the Madrasa campus.</p>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0">
-              <h6 class="fw-bold">Annual PTA Meeting</h6>
-              <p class="text-muted small">Discussion on curriculum updates, safety measures, and student welfare.</p>
+            <div class="card p-3 shadow-sm border-0 h-100">
+              <h6 class="fw-bold mb-2">Annual PTA Meeting</h6>
+              <p class="text-muted small mb-0">Focused on curriculum updates, safety measures, and student welfare initiatives.</p>
             </div>
           </div>
         </div>
@@ -96,14 +155,21 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
+  <footer class="text-white text-center py-3 mt-4">
     <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
   </footer>
 
+  <script>
+    // Scroll animation
+    const elements = document.querySelectorAll('[data-animate]');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) entry.target.classList.add('visible');
+      });
+    }, { threshold: 0.2 });
+
+    elements.forEach(el => observer.observe(el));
+  </script>
+
 </body>
 </html>
-
-
-
-
-
