--- a/faculties.html
+++ b/faculties.html
@@ -82,7 +82,7 @@
           <div class="faculty-card text-center">
             <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Suhail P">
             <h6 class="fw-bold mt-3">SUHAIL P</h6>
-            <small class="text-warning d-block">SWADAR MU'ALLIM</small>
+            <small class="text-warning d-block">SWADAR MUALLIM</small>
             <small class="d-block text-light">📞 7034678818</small>
             <p class="faculty-about">A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
           </div>
@@ -137,3 +137,4 @@
 
 </body>
 </html>
+
