--- a/pta.html
+++ b/pta.html
@@ -87,7 +87,7 @@
 
       <!-- MANAGEMENT -->
       <div class="text-center mb-4">
-        <h4 class="fw-bold mb-3 text-uppercase">Executive Members (2025–26)</h4>
+        <h4 class="fw-bold mb-3 text-uppercase">Executive Members</h4>
       </div>
 
       <div class="row g-4 justify-content-center">
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
