--- a/pta.html
+++ b/pta.html
@@ -3,174 +3,165 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parent-Teacher Association - Noorussalam Madrasa</title>
+  <title>PTA Members | Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
   <style>
     body {
-      font-family: 'Rubik', sans-serif;
-      background-color: #f7f9fc;
+      font-family: 'Poppins', sans-serif;
+      background: #f8f9fa;
     }
-
     header {
-      background: linear-gradient(135deg, #0d47a1, #1976d2);
-      color: #fff;
+      background: linear-gradient(135deg, #0b5ed7, #74b9ff);
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
     }
-
-    h2, h4, h5, h6 {
-      color: #0d47a1;
+    header h2 {
+      font-weight: 700;
     }
-
-    .card {
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      border-radius: 15px;
+    .member img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease;
     }
-
-    .card:hover {
+    .member img:hover {
+      transform: scale(1.05);
+    }
+    .member h6 {
+      margin-top: 10px;
+      font-weight: 600;
+      color: #0b5ed7;
+    }
+    .member small {
+      display: block;
+      color: #6c757d;
+    }
+    .activity-card {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .activity-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
     }
-
-    .fw-bold {
-      color: #0d47a1;
-    }
-
-    .btn-outline-primary {
-      border-color: #0d47a1;
-      color: #0d47a1;
-      transition: all 0.3s ease;
-    }
-
-    .btn-outline-primary:hover {
-      background-color: #0d47a1;
-      color: #fff;
-    }
-
     footer {
-      background: #0d47a1;
-      color: #fff;
-    }
-
-    /* Fade-in animation */
-    [data-animate] {
-      opacity: 0;
-      transform: translateY(20px);
-      transition: all 0.6s ease-in-out;
-    }
-
-    [data-animate].visible {
-      opacity: 1;
-      transform: translateY(0);
+      background: #0b5ed7;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
   <!-- HEADER -->
-  <header class="text-center py-4 shadow-sm">
-    <h2 class="mb-0 fw-bold text-white">Parent-Teacher Association (PTA)</h2>
-    <p class="mb-0 text-light">Working together for students’ success</p>
+  <header data-aos="fade-down">
+    <h2>Parent-Teacher Association (PTA)</h2>
+    <p class="mb-0">Working together for students’ success</p>
   </header>
 
-  <!-- PTA SECTION -->
-  <section id="pta" class="py-5">
+  <!-- MEMBERS SECTION -->
+  <section class="py-5">
     <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-md-8 text-center">
-          <p class="lead text-muted">
-            The <strong>Parent-Teacher Association (PTA)</strong> of <strong>Noorussalam Madrasa</strong> fosters close relationships 
-            between parents and teachers, ensuring the holistic growth of our students through collaboration, 
-            communication, and community involvement.
-          </p>
-        </div>
-      </div>
-
-      <!-- MANAGEMENT -->
-      <div class="text-center mb-4">
-        <h4 class="fw-bold mb-3 text-uppercase">Executive Members</h4>
+      <div class="text-center mb-5" data-aos="zoom-in">
+        <h4 class="fw-bold text-primary">Executive Members (2025–26)</h4>
+        <p class="text-muted">Meet the key members of our PTA</p>
       </div>
 
       <div class="row g-4 justify-content-center">
+
         <!-- President -->
-        <div class="col-md-4 text-center" data-animate>
-          <div class="card shadow-sm border-0 p-4">
-            <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="President" width="130" height="130" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr. Abdu Mangalath</h6>
-            <small class="text-muted d-block mb-1">President</small>
-            <p class="small text-muted mb-0">A respected community leader dedicated to enhancing student welfare and collaboration.</p>
-          </div>
+        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="100">
+          <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President">
+          <h6>Mr. Abdu Mangalath</h6>
+          <small>President</small>
+          <small>📞 9745234567</small>
         </div>
 
         <!-- Secretary -->
-        <div class="col-md-4 text-center" data-animate>
-          <div class="card shadow-sm border-0 p-4">
-            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="Secretary" width="130" height="130" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr. Fairoosudheen P</h6>
-            <small class="text-muted d-block mb-1">General Secretary</small>
-            <p class="small text-muted mb-0">Actively coordinates PTA activities and communication between parents and staff.</p>
-          </div>
+        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="200">
+          <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Secretary">
+          <h6>Mr. Fairoosudheen P</h6>
+          <small>General Secretary</small>
+          <small>📞 9847132567</small>
         </div>
 
         <!-- Treasurer -->
-        <div class="col-md-4 text-center" data-animate>
-          <div class="card shadow-sm border-0 p-4">
-            <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" class="rounded-circle mx-auto mb-3 shadow-sm" alt="Treasurer" width="130" height="130" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr. Saif Saleem P</h6>
-            <small class="text-muted d-block mb-1">Treasurer</small>
-            <p class="small text-muted mb-0">Ensures transparency and effective management of PTA financial activities.</p>
-          </div>
+        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="300">
+          <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" alt="Treasurer">
+          <h6>Mr. Saif Saleem P</h6>
+          <small>Treasurer</small>
+          <small>📞 9567341256</small>
         </div>
+
+        <!-- Staff Secretary -->
+        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="400">
+          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Vice President">
+          <h6>Mr. Ameerudheen P</h6>
+          <small>Staff Sectretary</small>
+          <small>📞 8078055520</small>
+        </div>
+
       </div>
 
-      <!-- Activities Section -->
-      <div class="mt-5" data-animate>
-        <h5 class="text-center fw-bold mb-4 text-uppercase">Recent PTA Activities</h5>
-        <div class="row g-4">
-          <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0 h-100">
-              <h6 class="fw-bold mb-2">Parent Awareness Program</h6>
-              <p class="text-muted small mb-0">A seminar on effective parenting and communication between teachers and parents.</p>
-            </div>
+      <!-- PTA ACTIVITIES -->
+      <div class="text-center mt-5 mb-4" data-aos="fade-right">
+        <h5 class="fw-bold text-primary">Recent PTA Activities</h5>
+      </div>
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="activity-card">
+            <h6>Parent Awareness Program</h6>
+            <p class="text-muted small mb-0">A seminar conducted on effective parenting and communication with teachers.</p>
           </div>
-          <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0 h-100">
-              <h6 class="fw-bold mb-2">Campus Clean-Up Day</h6>
-              <p class="text-muted small mb-0">Parents, students, and teachers joined hands to beautify the Madrasa campus.</p>
-            </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="activity-card">
+            <h6>Campus Clean-Up Day</h6>
+            <p class="text-muted small mb-0">Parents, students, and teachers joined hands to beautify the campus.</p>
           </div>
-          <div class="col-md-4">
-            <div class="card p-3 shadow-sm border-0 h-100">
-              <h6 class="fw-bold mb-2">Annual PTA Meeting</h6>
-              <p class="text-muted small mb-0">Focused on curriculum updates, safety measures, and student welfare initiatives.</p>
-            </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="activity-card">
+            <h6>Annual PTA Meeting</h6>
+            <p class="text-muted small mb-0">Discussion on curriculum updates, safety measures, and student welfare.</p>
           </div>
         </div>
       </div>
 
       <!-- BACK TO HOME -->
-      <div class="text-center mt-5">
+      <div class="text-center mt-5" data-aos="fade-up">
         <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="text-white text-center py-3 mt-4">
+  <footer data-aos="fade-up">
     <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
   </footer>
 
+  <!-- AOS Script -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
-    // Scroll animation
-    const elements = document.querySelectorAll('[data-animate]');
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) entry.target.classList.add('visible');
-      });
-    }, { threshold: 0.2 });
-
-    elements.forEach(el => observer.observe(el));
+    AOS.init({
+      duration: 1000,
+      once: true
+    });
   </script>
-
 </body>
 </html>
-
