--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
       </ul>
-      <a href="studentzone.html" class="btn btn-primary ms-lg-3">student zone</a>
+      <a href="student-zone.html" class="btn btn-primary ms-lg-3">student zone</a>
     </div>
   </div>
 </nav>
@@ -397,6 +397,7 @@
 
 </body>
 </html>
+
 
 
 
