--- a/coming-soon.html
+++ b/coming-soon.html
@@ -119,8 +119,8 @@
   <div class="coming-box">
     <i class="fa-solid fa-clock"></i>
     <h2>Coming Soon</h2>
-    <p>We’re preparing something special for Noorussalam Madrasa.<br>
-       Stay tuned — launching soon!</p>
+    <p>We’re preparing results as something special for Noorussalam Madrasa.<br>
+       Stay tuned — appear soon!</p>
 
     <div id="countdown">
       <div class="time-box"><h3 id="days">00</h3><span>Days</span></div>
