--- a/result.html
+++ b/result.html
@@ -73,7 +73,7 @@
     <h1>Final Examination Result 2025-26</h1>
     <p>Click below to view your latest examination results.</p>
 
-    <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
+    <a href="coming-soon.html" 
        class="btn btn-success btn-lg" 
        target="_blank">
        <i class="fa-solid fa-graduation-cap me-2"></i> View Results
@@ -88,6 +88,7 @@
 
 </body>
 </html>
+
 
 
 
